# push_swap_after_freeze

./: CMakeLists.txt  Makefile  error_checker.c  init_push_swap.c  init_stack_a.c  main.c  push.c  push_swap.h  push_swap.h.gch  rev_rotate.c  rotate.c  sort_stacks.c  sort_three.c  split.c  stack_utils.c  swap.c
libft/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
printf/: Makefile  ft_printf.h  printf.c  printf_hex_utils.c  printf_ptr_hex.c  printf_utils.c
